src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ER_Group__c</fullName>
        <label>ER Group</label>
        <picklist>
            <picklistValues>
                <fullName>4M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4md2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMN Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Born &amp; Bicknell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Emergency Physicians (CEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cejka Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone Physicians Management Group (CPMG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Physician Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDCare (HPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Consultants (ECI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Associates (EMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Care (EMC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine Physicians (EMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine Specialists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Physicians Medical Group (EPMG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Physicians of Tidewater (EPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Service Partners (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Staffing Solutions (ESS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmergiNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPPA (Emergency Physicians Professional Association)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER Stat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Physician Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Healthcare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Ext</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FTP_Contact__c</fullName>
        <label>FTP Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTP Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_E_mail__c</fullName>
        <description>The general email for this account / hospital (listed in blue book).</description>
        <label>Facility E-mail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <description>Hospital Facility TSG Unique Identifier. Converted to autonumber to create a SFDC index on 10/1/06. starting at 010340</description>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Facility ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Facility_NPI_ID__c</fullName>
        <description>National provider ID from OneApp for the Account / Facility.</description>
        <label>Facility_NPI_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Sheet_Requirements__c</fullName>
        <description>Used on the Facility Sheet posted on the web for hiring.</description>
        <label>Facility Sheet Requirements</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Short_Name__c</fullName>
        <label>Facility Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Start_Up_Time__c</fullName>
        <label>Client Start Up Time</label>
        <picklist>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0530</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0730</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0830</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Termination_Time__c</fullName>
        <label>Client Termination Time</label>
        <picklist>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0530</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0730</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0830</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_Contact__c</fullName>
        <label>Fax Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Former_ER_Group__c</fullName>
        <label>ER Former Group</label>
        <picklist>
            <picklistValues>
                <fullName>4M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4md2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMN Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Born &amp; Bicknell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Emergency Physicians (CEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cejka Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone Physicians Management Group (CPMG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Physician Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDCare (HPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Consutlants (ECI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Associates (EMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine Physicians (EMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine Specialists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Physicians Medical Group (EPMG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Physicians of Tidewater (EPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Service Partners (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Staffing Solutions (ESS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmergiNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER Stat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Physician Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson &amp; Coker (JC Nationwide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Emergency Services Associates (MESA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Startup_Days__c</fullName>
        <description>The number of day this client has been active from the startup date.</description>
        <formula>IF(DAY(Client_Statup_Date__c)&lt;1 , 0,  Today() - Client_Statup_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Startup Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GlobalFacilityID__c</fullName>
        <description>TSG Global Facility ID hosted in SFDC to supply all systems at TSG with a common ID.</description>
        <displayFormat>{0}</displayFormat>
        <label>GlobalFacilityID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Google_Alert_Cancel_URL__c</fullName>
        <inlineHelpText>Generated automatically by the &quot;Google Alerts to Chatter&quot; application.  This link will cancel the Google Alert for this account.</inlineHelpText>
        <label>Google Alert Cancel URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Alert_Search_Term_s__c</fullName>
        <inlineHelpText>What terms should Google search for?  The default is the account&apos;s name.  To change the search term(s), cancel any active Google Alerts for this account, change this field, and sign up for alerts.</inlineHelpText>
        <label>Google Alert Search Term(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Alerts_to_Chatter_Status__c</fullName>
        <description>Part of the &quot;Google Apps to Chatter&quot; application.</description>
        <inlineHelpText>Choose &quot;Sign Up&quot; to initiate a Google Alert to Chatter for this account.  Choose &quot;Cancel&quot; to stop it.</inlineHelpText>
        <label>Google Alerts to Chatter Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Affiliated__c</fullName>
        <label>Group Affiliated</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Ownership__c</fullName>
        <description>Formally Group Ownership. labeled changed at urgent request by Jamie Trahan per Jim Guidry or Donna Landry for a urgent report.</description>
        <inlineHelpText>Formally Group Ownership</inlineHelpText>
        <label>Hospital System Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HMO_PPO__c</fullName>
        <label>HMO/PPO %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HM_Former_Group__c</fullName>
        <label>HM Former Group</label>
        <picklist>
            <picklistValues>
                <fullName>Apogee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCAPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Exigence Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HM_Group__c</fullName>
        <label>HM Group</label>
        <picklist>
            <picklistValues>
                <fullName>Apogee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCAPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Physician Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Exigence Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPSA_Designation_Date__c</fullName>
        <description>Date Designated as HPSA.</description>
        <label>HPSA Designation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPSA_Last_Update_Date__c</fullName>
        <description>Last Update Date of HPSA Designation.</description>
        <label>HPSA Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPSA_Medicare_Bonus_Eligible__c</fullName>
        <description>Eligible for Medicare Physician Bonus Payment.</description>
        <label>HPSA Medicare Bonus Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPSA_Status__c</fullName>
        <description>Status of HPSA Designation. Indicator of whether the HPSA is still valid or is propsed for withdrawal or withdrawn.</description>
        <label>HPSA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Designated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No New Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPSA__c</fullName>
        <description>Whether the Account is in a Health Professional Shortage Area - Primary Care. Identification of HPSA eligible locations for Visa physician utilization.</description>
        <label>HPSA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_QMP_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this facility have a QMP program and uses it.</description>
        <label>Has QMP Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospital_Annual_Dues__c</fullName>
        <label>Hospital Annual Dues</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hospital_Application_Fee__c</fullName>
        <description>ApplicationFee</description>
        <label>Hospital Application Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hospital_Mission_Statement__c</fullName>
        <description>Use at startup to record the:  Hospital Mission Statement.   This is a 255 text area field.</description>
        <label>Hospital Mission Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hospital_Ownership_Type_2__c</fullName>
        <label>Hospital Ownership Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federally Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Authority Owned</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Ownership_Type__c</fullName>
        <label>Hospital Ownership Type</label>
        <picklist>
            <picklistValues>
                <fullName>For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Tax_ID__c</fullName>
        <description>Linda Guidry requested this field to house the Hospital Tax ID for the hospital</description>
        <label>Hospital Tax ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Taxomony__c</fullName>
        <description>Linda Guidry requested this field to house the Hospital Taxomony # for the hospital</description>
        <label>Hospital Taxomony</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Hospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the Account to one other Account.  Used from the Rehab Hospitals and Long Term Hospitals to link back to the Host Hospital.</description>
        <inlineHelpText>Link to facility where hosptial (ie. Rehab/LTAC) is located</inlineHelpText>
        <label>Host Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Host Hospital</relationshipLabel>
        <relationshipName>Host_Hospital</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hourly_Regular_Subsidy__c</fullName>
        <label>Hourly Regular Subsidy</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICU_Beds__c</fullName>
        <label>ICU Beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDSHospID__c</fullName>
        <description>IDSHospID</description>
        <label>IDSHospID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_notes__c</fullName>
        <description>Use to record issue with linking to other systems:  Admin only</description>
        <label>Integration_notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LWOT_Opportunity__c</fullName>
        <label>LWOT Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LWOT__c</fullName>
        <label>LWOT %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Leave_Status__c</fullName>
        <label>Leave Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <inlineHelpText>Legal corporate entity of the hospital.</inlineHelpText>
        <label>Legal Entity</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Attractions__c</fullName>
        <description>Use at startup to record the:  Local Attractions  (255 char. field).  Also see Nearby Places field in the account.</description>
        <label>Local Attractions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Call_Room__c</fullName>
        <description>Use at startup to record the: Location of Call Room.</description>
        <label>Location of Call Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_ED_schedule__c</fullName>
        <description>Use at Startup to record &quot;Location of ED schedule&quot;.</description>
        <label>Location of ED schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUA__c</fullName>
        <description>Whether the Account is in a Medically Underserved Area.</description>
        <label>MUA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <label>Managed By</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Care_Opportuntity__c</fullName>
        <label>Managed Care Opportuntity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Management_Style__c</fullName>
        <label>Management Style</label>
        <picklist>
            <picklistValues>
                <fullName>Academic/Teaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion_Comment__c</fullName>
        <label>Mark for Deletion Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Med_Surg__c</fullName>
        <label>Med_Surg</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicaid__c</fullName>
        <description>* Emergency Department Payor Mix (as a percent of emergency room patient volume and not charges)</description>
        <label>Medicaid %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Medical_Director_Annual_Fee__c</fullName>
        <inlineHelpText>Includes Assistant Medical Director and Lead Midlevel Provider</inlineHelpText>
        <label>Medical Director Annual Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Staff_Office_FAX__c</fullName>
        <label>Medical Staff Office FAX #</label>
        <type>Phone</type>
    </fields>
</CustomObject>